// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`circular data types accept circular types 1`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "xyz",
    },
  ],
}
`;

exports[`circular data types accept circular types 2`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "abc",
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept circular types 3`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "abc",
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept circular types 4`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept circular types 5`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "abc",
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "abc",
                        },
                        Object {
                          "__typename": "Node",
                          "children": Array [
                            Object {
                              "__typename": "Leaf",
                              "name": "xyz",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`circular data types accept simple leaf 1`] = `
Object {
  "__typename": "Leaf",
  "name": "abcd",
}
`;

exports[`circular data types reject invalid circular types 1`] = `"value 3 should be either string or object to match type NodeType."`;

exports[`circular data types reject invalid circular types 2`] = `"value [{ __typename: \\"Leaf\\", name: \\"abc\\" }] should be either string or object to match type NodeType."`;

exports[`circular data types reject invalid circular types 3`] = `"value 3 should be either string or object to match type NodeType."`;

exports[`circular data types reject invalid circular types 4`] = `"value 3 should be either string or object to match type NodeType."`;

exports[`circular data types reject invalid circular types 5`] = `"value 3 should be either string or object to match type NodeType."`;

exports[`parse simple data variants accept recursive nodes 1`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "xyz",
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 2`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Leaf",
      "name": "abc",
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 3`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "abc",
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 4`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Leaf",
          "name": "xyz",
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept recursive nodes 5`] = `
Object {
  "__typename": "Node",
  "children": Array [
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "xyz",
            },
          ],
        },
      ],
    },
    Object {
      "__typename": "Node",
      "children": Array [
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Leaf",
              "name": "abc",
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "abc",
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "xyz",
                    },
                  ],
                },
              ],
            },
          ],
        },
        Object {
          "__typename": "Node",
          "children": Array [
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Leaf",
                  "name": "xyz",
                },
              ],
            },
            Object {
              "__typename": "Node",
              "children": Array [
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Leaf",
                      "name": "abc",
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "__typename": "Node",
                  "children": Array [
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "xyz",
                        },
                      ],
                    },
                    Object {
                      "__typename": "Node",
                      "children": Array [
                        Object {
                          "__typename": "Leaf",
                          "name": "abc",
                        },
                        Object {
                          "__typename": "Node",
                          "children": Array [
                            Object {
                              "__typename": "Leaf",
                              "name": "xyz",
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`parse simple data variants accept simple leaf 1`] = `
Object {
  "__typename": "Leaf",
  "name": "abcd",
}
`;

exports[`parse simple data variants don't accept non data values 1`] = `"value [\\"Leaf\\"] should be either string or object to match type NodeType."`;

exports[`parse simple data variants don't accept non data values 2`] = `"value [{ __typename: \\"Leaf\\", name: \\"abcd\\" }] should be either string or object to match type NodeType."`;

exports[`parse simple data variants reject invalid recursive nodes 1`] = `"value 3 should be either string or object to match type NodeType."`;

exports[`parse simple data variants reject invalid recursive nodes 2`] = `"value [{ __typename: \\"Leaf\\", name: \\"abc\\" }] should be either string or object to match type NodeType."`;

exports[`parse simple data variants reject invalid recursive nodes 3`] = `"value 3 should be either string or object to match type NodeType."`;

exports[`parse simple data variants reject invalid recursive nodes 4`] = `"value 3 should be either string or object to match type NodeType."`;

exports[`parse simple data variants reject invalid recursive nodes 5`] = `"value 3 should be either string or object to match type NodeType."`;
